// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auth2faType: off 1`] = `
.c2 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 0px;
  width: 100%;
}

.c9 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-bottom: 4px;
  margin-top: 16px;
  width: 100%;
}

.c9:active {
  opacity: 0.56;
}

.c9:hover,
.c9:focus {
  background: #651FFF;
}

.c9:active {
  background: #354AA4;
}

.c9:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  padding-bottom: 24px;
  width: 464px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c7 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #000000;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c7::-ms-clear {
  display: none;
}

.c7::placeholder {
  opacity: 0.4;
}

.c7:read-only {
  cursor: not-allowed;
}

.c7:disabled {
  color: rgba(0,0,0,0.5);
}

.c6 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 24px;
  color: #FFFFFF;
  text-align: center;
}

.c4 {
  box-sizing: border-box;
  padding-top: 16px;
  padding-left: 32px;
  padding-right: 32px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.c3 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c3 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c3 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c3 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c3 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c3 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

<div
  class="c0"
  width="464"
>
  <div
    class="c1"
    color="light"
  >
    Custom Title
  </div>
  <div
    class="c2"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c3"
    >
      <div
        class="c2"
      >
        <form
          class="c4"
          data-testid="userpassword"
        >
          <div
            class="c5"
          >
            <label
              class="c6"
              font-size="0"
            >
              Username
              <input
                autocomplete="off"
                class="c7"
                color="text.primaryInverse"
                inputmode="text"
                placeholder="Username"
                type="text"
                value=""
              />
            </label>
          </div>
          <div
            class="c5"
          >
            <div
              class="c8"
              width="100%"
            >
              <label
                class="c6"
                font-size="0"
              >
                Password
                <input
                  autocomplete="off"
                  class="c7"
                  color="text.primaryInverse"
                  inputmode="text"
                  placeholder="Password"
                  type="password"
                  value=""
                />
              </label>
            </div>
          </div>
          <button
            class="c9"
            kind="primary"
            type="submit"
            width="100%"
          >
            Sign In
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`auth2faType: optional rendering 1`] = `
.c2 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 0px;
  width: 100%;
}

.c10 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 0px;
  margin-right: 16px;
  width: 100%;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-bottom: 4px;
  margin-top: 16px;
  width: 100%;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #651FFF;
}

.c13:active {
  background: #354AA4;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  padding-bottom: 24px;
  width: 464px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c7 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #000000;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c7::-ms-clear {
  display: none;
}

.c7::placeholder {
  opacity: 0.4;
}

.c7:read-only {
  cursor: not-allowed;
}

.c7:disabled {
  color: rgba(0,0,0,0.5);
}

.c6 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c11 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 24px;
  color: #FFFFFF;
  text-align: center;
}

.c4 {
  box-sizing: border-box;
  padding-top: 16px;
  padding-left: 32px;
  padding-right: 32px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.c9 {
  box-sizing: border-box;
  display: flex;
  align-items: flex-end;
}

.c3 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c3 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c3 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c3 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c3 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c3 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c12 .react-select-container {
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #ffffff;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c12 .react-select__control,
.c12 .react-select__control--is-focused {
  min-height: 40px;
  height: fit-content;
  background-color: transparent;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
}

.c12 .react-select__control:hover,
.c12 .react-select__control--is-focused:hover {
  border-color: transparent;
  cursor: pointer;
}

.c12 .react-select__option:hover {
  cursor: pointer;
  background-color: #eceff1;
}

.c12 .react-select__option--is-focused {
  background-color: #eceff1;
}

.c12 .react-select__option--is-selected {
  background-color: #cfd8dc;
  color: inherit;
}

.c12 .react-select__option--is-selected:hover {
  background-color: #cfd8dc;
}

.c12 .react-select__menu {
  margin-top: 0px;
}

.c12 .react-select__indicator-separator {
  display: none;
}

.c12 .react-select__loading-indicator {
  display: none;
}

.c12 .react-select--is-disabled .react-select__single-value,
.c12 .react-select--is-disabled .react-select__placeholder {
  color: rgba(0,0,0,0.24);
}

.c12 .react-select--is-disabled .react-select__indicator {
  color: rgba(0,0,0,0.14);
}

<div
  class="c0"
  width="464"
>
  <div
    class="c1"
    color="light"
  >
    Custom Title
  </div>
  <div
    class="c2"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c3"
    >
      <div
        class="c2"
      >
        <form
          class="c4"
          data-testid="userpassword"
        >
          <div
            class="c5"
          >
            <label
              class="c6"
              font-size="0"
            >
              Username
              <input
                autocomplete="off"
                class="c7"
                color="text.primaryInverse"
                inputmode="text"
                placeholder="Username"
                type="text"
                value=""
              />
            </label>
          </div>
          <div
            class="c5"
          >
            <div
              class="c8"
              width="100%"
            >
              <label
                class="c6"
                font-size="0"
              >
                Password
                <input
                  autocomplete="off"
                  class="c7"
                  color="text.primaryInverse"
                  inputmode="text"
                  placeholder="Password"
                  type="password"
                  value=""
                />
              </label>
            </div>
          </div>
          <div
            class="c5"
          >
            <div
              class="c9"
            >
              <div
                class="c10"
                data-testid="mfa-select"
                width="100%"
              >
                <label
                  class="c11"
                  font-size="0"
                  for="select"
                >
                  Two-factor type
                </label>
                <div
                  class="c12"
                >
                  <div
                    class="react-select-container css-2b097c-container"
                  >
                    <div
                      class="react-select__control css-yk16xz-control"
                    >
                      <div
                        class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                      >
                        <div
                          class="react-select__single-value css-1uccc91-singleValue"
                        >
                          Hardware Key
                        </div>
                        <input
                          aria-autocomplete="list"
                          class="css-62g3xt-dummyInput"
                          id="select"
                          readonly=""
                          tabindex="0"
                          value=""
                        />
                      </div>
                      <div
                        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-6q0nyr-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="c13"
            kind="primary"
            type="submit"
            width="100%"
          >
            Sign In
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`auth2faType: otp rendering 1`] = `
.c2 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 0px;
  width: 100%;
}

.c10 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 0px;
  margin-right: 16px;
  width: 100%;
}

.c13 {
  box-sizing: border-box;
  margin-bottom: 0px;
  width: 50%;
}

.c14 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-bottom: 4px;
  margin-top: 16px;
  width: 100%;
}

.c14:active {
  opacity: 0.56;
}

.c14:hover,
.c14:focus {
  background: #651FFF;
}

.c14:active {
  background: #354AA4;
}

.c14:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  padding-bottom: 24px;
  width: 464px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c7 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #000000;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c7::-ms-clear {
  display: none;
}

.c7::placeholder {
  opacity: 0.4;
}

.c7:read-only {
  cursor: not-allowed;
}

.c7:disabled {
  color: rgba(0,0,0,0.5);
}

.c6 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c11 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 24px;
  color: #FFFFFF;
  text-align: center;
}

.c4 {
  box-sizing: border-box;
  padding-top: 16px;
  padding-left: 32px;
  padding-right: 32px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.c9 {
  box-sizing: border-box;
  display: flex;
  align-items: flex-end;
}

.c3 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c3 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c3 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c3 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c3 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c3 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c12 .react-select-container {
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #ffffff;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c12 .react-select__control,
.c12 .react-select__control--is-focused {
  min-height: 40px;
  height: fit-content;
  background-color: transparent;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
}

.c12 .react-select__control:hover,
.c12 .react-select__control--is-focused:hover {
  border-color: transparent;
  cursor: pointer;
}

.c12 .react-select__option:hover {
  cursor: pointer;
  background-color: #eceff1;
}

.c12 .react-select__option--is-focused {
  background-color: #eceff1;
}

.c12 .react-select__option--is-selected {
  background-color: #cfd8dc;
  color: inherit;
}

.c12 .react-select__option--is-selected:hover {
  background-color: #cfd8dc;
}

.c12 .react-select__menu {
  margin-top: 0px;
}

.c12 .react-select__indicator-separator {
  display: none;
}

.c12 .react-select__loading-indicator {
  display: none;
}

.c12 .react-select--is-disabled .react-select__single-value,
.c12 .react-select--is-disabled .react-select__placeholder {
  color: rgba(0,0,0,0.24);
}

.c12 .react-select--is-disabled .react-select__indicator {
  color: rgba(0,0,0,0.14);
}

<div
  class="c0"
  width="464"
>
  <div
    class="c1"
    color="light"
  >
    Custom Title
  </div>
  <div
    class="c2"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c3"
    >
      <div
        class="c2"
      >
        <form
          class="c4"
          data-testid="userpassword"
        >
          <div
            class="c5"
          >
            <label
              class="c6"
              font-size="0"
            >
              Username
              <input
                autocomplete="off"
                class="c7"
                color="text.primaryInverse"
                inputmode="text"
                placeholder="Username"
                type="text"
                value=""
              />
            </label>
          </div>
          <div
            class="c5"
          >
            <div
              class="c8"
              width="100%"
            >
              <label
                class="c6"
                font-size="0"
              >
                Password
                <input
                  autocomplete="off"
                  class="c7"
                  color="text.primaryInverse"
                  inputmode="text"
                  placeholder="Password"
                  type="password"
                  value=""
                />
              </label>
            </div>
          </div>
          <div
            class="c5"
          >
            <div
              class="c9"
            >
              <div
                class="c10"
                data-testid="mfa-select"
                width="100%"
              >
                <label
                  class="c11"
                  font-size="0"
                  for="select"
                >
                  Two-factor type
                </label>
                <div
                  class="c12"
                >
                  <div
                    class="react-select-container css-2b097c-container"
                  >
                    <div
                      class="react-select__control css-yk16xz-control"
                    >
                      <div
                        class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                      >
                        <div
                          class="react-select__single-value css-1uccc91-singleValue"
                        >
                          Authenticator App
                        </div>
                        <input
                          aria-autocomplete="list"
                          class="css-62g3xt-dummyInput"
                          id="select"
                          readonly=""
                          tabindex="0"
                          value=""
                        />
                      </div>
                      <div
                        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-6q0nyr-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="c13"
                width="50%"
              >
                <label
                  class="c6"
                  font-size="0"
                >
                  Authenticator code
                  <input
                    autocomplete="one-time-code"
                    class="c7"
                    color="text.primaryInverse"
                    inputmode="numeric"
                    placeholder="123 456"
                    type="text"
                    value=""
                  />
                </label>
              </div>
            </div>
          </div>
          <button
            class="c14"
            kind="primary"
            type="submit"
            width="100%"
          >
            Sign In
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`auth2faType: webauthn rendering 1`] = `
.c2 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 0px;
  width: 100%;
}

.c10 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 0px;
  margin-right: 16px;
  width: 100%;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-bottom: 4px;
  margin-top: 16px;
  width: 100%;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #651FFF;
}

.c13:active {
  background: #354AA4;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  padding-bottom: 24px;
  width: 464px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c7 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #000000;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c7::-ms-clear {
  display: none;
}

.c7::placeholder {
  opacity: 0.4;
}

.c7:read-only {
  cursor: not-allowed;
}

.c7:disabled {
  color: rgba(0,0,0,0.5);
}

.c6 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c11 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 24px;
  color: #FFFFFF;
  text-align: center;
}

.c4 {
  box-sizing: border-box;
  padding-top: 16px;
  padding-left: 32px;
  padding-right: 32px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.c9 {
  box-sizing: border-box;
  display: flex;
  align-items: flex-end;
}

.c3 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c3 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c3 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c3 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c3 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c3 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c12 .react-select-container {
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #ffffff;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c12 .react-select__control,
.c12 .react-select__control--is-focused {
  min-height: 40px;
  height: fit-content;
  background-color: transparent;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
}

.c12 .react-select__control:hover,
.c12 .react-select__control--is-focused:hover {
  border-color: transparent;
  cursor: pointer;
}

.c12 .react-select__option:hover {
  cursor: pointer;
  background-color: #eceff1;
}

.c12 .react-select__option--is-focused {
  background-color: #eceff1;
}

.c12 .react-select__option--is-selected {
  background-color: #cfd8dc;
  color: inherit;
}

.c12 .react-select__option--is-selected:hover {
  background-color: #cfd8dc;
}

.c12 .react-select__menu {
  margin-top: 0px;
}

.c12 .react-select__indicator-separator {
  display: none;
}

.c12 .react-select__loading-indicator {
  display: none;
}

.c12 .react-select--is-disabled .react-select__single-value,
.c12 .react-select--is-disabled .react-select__placeholder {
  color: rgba(0,0,0,0.24);
}

.c12 .react-select--is-disabled .react-select__indicator {
  color: rgba(0,0,0,0.14);
}

<div
  class="c0"
  width="464"
>
  <div
    class="c1"
    color="light"
  >
    Custom Title
  </div>
  <div
    class="c2"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c3"
    >
      <div
        class="c2"
      >
        <form
          class="c4"
          data-testid="userpassword"
        >
          <div
            class="c5"
          >
            <label
              class="c6"
              font-size="0"
            >
              Username
              <input
                autocomplete="off"
                class="c7"
                color="text.primaryInverse"
                inputmode="text"
                placeholder="Username"
                type="text"
                value=""
              />
            </label>
          </div>
          <div
            class="c5"
          >
            <div
              class="c8"
              width="100%"
            >
              <label
                class="c6"
                font-size="0"
              >
                Password
                <input
                  autocomplete="off"
                  class="c7"
                  color="text.primaryInverse"
                  inputmode="text"
                  placeholder="Password"
                  type="password"
                  value=""
                />
              </label>
            </div>
          </div>
          <div
            class="c5"
          >
            <div
              class="c9"
            >
              <div
                class="c10"
                data-testid="mfa-select"
                width="100%"
              >
                <label
                  class="c11"
                  font-size="0"
                  for="select"
                >
                  Two-factor type
                </label>
                <div
                  class="c12"
                >
                  <div
                    class="react-select-container css-2b097c-container"
                  >
                    <div
                      class="react-select__control css-yk16xz-control"
                    >
                      <div
                        class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                      >
                        <div
                          class="react-select__single-value css-1uccc91-singleValue"
                        >
                          Hardware Key
                        </div>
                        <input
                          aria-autocomplete="list"
                          class="css-62g3xt-dummyInput"
                          id="select"
                          readonly=""
                          tabindex="0"
                          value=""
                        />
                      </div>
                      <div
                        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-6q0nyr-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="c13"
            kind="primary"
            type="submit"
            width="100%"
          >
            Sign In
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`cloud auth2faType: on rendering 1`] = `
.c2 {
  box-sizing: border-box;
}

.c5 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c8 {
  box-sizing: border-box;
  margin-bottom: 4px;
}

.c9 {
  box-sizing: border-box;
  margin-bottom: 0px;
  width: 100%;
}

.c10 {
  box-sizing: border-box;
  text-align: right;
}

.c13 {
  box-sizing: border-box;
  margin-bottom: 8px;
}

.c15 {
  box-sizing: border-box;
  max-width: 50%;
  margin-bottom: 0px;
  margin-right: 16px;
  width: 100%;
}

.c12 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c12:active {
  opacity: 0.56;
}

.c12:hover,
.c12:focus {
  background: #651FFF;
}

.c12:active {
  background: #354AA4;
}

.c12:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-bottom: 4px;
  margin-top: 16px;
  width: 100%;
}

.c18:active {
  opacity: 0.56;
}

.c18:hover,
.c18:focus {
  background: #651FFF;
}

.c18:active {
  background: #354AA4;
}

.c18:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c11 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  padding: 0 8px;
}

.c11:hover,
.c11:focus {
  background: #222C59;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  padding-bottom: 24px;
  width: 464px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c7 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #000000;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c7::-ms-clear {
  display: none;
}

.c7::placeholder {
  opacity: 0.4;
}

.c7:read-only {
  cursor: not-allowed;
}

.c7:disabled {
  color: rgba(0,0,0,0.5);
}

.c6 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c16 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 24px;
  color: #FFFFFF;
  text-align: center;
}

.c4 {
  box-sizing: border-box;
  padding-top: 16px;
  padding-left: 32px;
  padding-right: 32px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.c14 {
  box-sizing: border-box;
  display: flex;
  align-items: flex-end;
}

.c3 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c3 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c3 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c3 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c3 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c3 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c17 .react-select-container {
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  border: none;
  display: block;
  font-size: 14px;
  outline: none;
  width: 100%;
  color: rgba(0,0,0,0.87);
  background-color: #ffffff;
  margin-bottom: 0px;
  border-radius: 4px;
}

.c17 .react-select__control,
.c17 .react-select__control--is-focused {
  min-height: 40px;
  height: fit-content;
  background-color: transparent;
  border-color: transparent;
  border-radius: 4px;
  border-style: solid;
  border-width: 1px;
  box-shadow: none;
}

.c17 .react-select__control:hover,
.c17 .react-select__control--is-focused:hover {
  border-color: transparent;
  cursor: pointer;
}

.c17 .react-select__option:hover {
  cursor: pointer;
  background-color: #eceff1;
}

.c17 .react-select__option--is-focused {
  background-color: #eceff1;
}

.c17 .react-select__option--is-selected {
  background-color: #cfd8dc;
  color: inherit;
}

.c17 .react-select__option--is-selected:hover {
  background-color: #cfd8dc;
}

.c17 .react-select__menu {
  margin-top: 0px;
}

.c17 .react-select__indicator-separator {
  display: none;
}

.c17 .react-select__loading-indicator {
  display: none;
}

.c17 .react-select--is-disabled .react-select__single-value,
.c17 .react-select--is-disabled .react-select__placeholder {
  color: rgba(0,0,0,0.24);
}

.c17 .react-select--is-disabled .react-select__indicator {
  color: rgba(0,0,0,0.14);
}

<div
  class="c0"
  width="464"
>
  <div
    class="c1"
    color="light"
  >
    Teleport Cloud
  </div>
  <div
    class="c2"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c3"
    >
      <div
        class="c2"
      >
        <form
          class="c4"
          data-testid="userpassword"
        >
          <div
            class="c5"
          >
            <label
              class="c6"
              font-size="0"
            >
              Username
              <input
                autocomplete="off"
                class="c7"
                color="text.primaryInverse"
                inputmode="text"
                placeholder="Username"
                type="text"
                value=""
              />
            </label>
          </div>
          <div
            class="c8"
          >
            <div
              class="c9"
              width="100%"
            >
              <label
                class="c6"
                font-size="0"
              >
                Password
                <input
                  autocomplete="off"
                  class="c7"
                  color="text.primaryInverse"
                  inputmode="text"
                  placeholder="Password"
                  type="password"
                  value=""
                />
              </label>
            </div>
            <div
              class="c10"
            >
              <a
                class="c11 c12"
                kind="primary"
                style="padding: 0px; min-height: 0;"
              >
                Forgot Password?
              </a>
            </div>
          </div>
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <div
                class="c15"
                data-testid="mfa-select"
                width="100%"
              >
                <label
                  class="c16"
                  font-size="0"
                  for="select"
                >
                  Two-factor type
                </label>
                <div
                  class="c17"
                >
                  <div
                    class="react-select-container css-2b097c-container"
                  >
                    <div
                      class="react-select__control css-yk16xz-control"
                    >
                      <div
                        class="react-select__value-container react-select__value-container--has-value css-g1d714-ValueContainer"
                      >
                        <div
                          class="react-select__single-value css-1uccc91-singleValue"
                        >
                          Hardware Key
                        </div>
                        <input
                          aria-autocomplete="list"
                          class="css-62g3xt-dummyInput"
                          id="select"
                          readonly=""
                          tabindex="0"
                          value=""
                        />
                      </div>
                      <div
                        class="react-select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="react-select__indicator-separator css-1okebmr-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="react-select__indicator react-select__dropdown-indicator css-tlfecz-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-6q0nyr-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <a
              class="c11 c12"
              kind="primary"
              style="padding: 0px; min-height: 0;"
            >
              Lost Two-Factor Device?
            </a>
          </div>
          <button
            class="c18"
            kind="primary"
            type="submit"
            width="100%"
          >
            Sign In
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`no login enabled 1`] = `
.c2 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  margin-top: 32px;
  margin-bottom: 32px;
  background: #f50057;
  color: #FFFFFF;
}

.c2 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  padding-bottom: 24px;
  padding-left: 32px;
  padding-right: 32px;
  width: 464px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 24px;
  color: #FFFFFF;
  text-align: center;
}

.c3 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 8px;
}

<div
  class="c0"
  width="464px"
>
  <div
    class="c1"
    color="light"
  >
    Welcome!
  </div>
  <div
    class="c2"
    kind="danger"
  >
    Login has not been enabled
  </div>
  <div
    class="c3"
    width="100%"
  >
    The ability to login has not been enabled. Please contact your system administrator for more information.
  </div>
</div>
`;

exports[`server error rendering 1`] = `
.c2 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  margin: 32px;
  margin-bottom: 0px;
  background: #f50057;
  color: #FFFFFF;
}

.c2 a {
  color: #FFFFFF;
}

.c3 {
  box-sizing: border-box;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c9 {
  box-sizing: border-box;
  margin-bottom: 0px;
  width: 100%;
}

.c10 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-bottom: 4px;
  margin-top: 16px;
  width: 100%;
}

.c10:active {
  opacity: 0.56;
}

.c10:hover,
.c10:focus {
  background: #651FFF;
}

.c10:active {
  background: #354AA4;
}

.c10:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  padding-bottom: 24px;
  width: 464px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c8 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,0.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #000000;
  background-color: #FFFFFF;
  margin-top: 4px;
}

.c8::-ms-clear {
  display: none;
}

.c8::placeholder {
  opacity: 0.4;
}

.c8:read-only {
  cursor: not-allowed;
}

.c8:disabled {
  color: rgba(0,0,0,0.5);
}

.c7 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 0px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 24px;
  color: #FFFFFF;
  text-align: center;
}

.c5 {
  box-sizing: border-box;
  padding-top: 16px;
  padding-left: 32px;
  padding-right: 32px;
  border-bottom-right-radius: 8px;
  border-bottom-left-radius: 8px;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.c4 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c4 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c4 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

<div
  class="c0"
  width="464"
>
  <div
    class="c1"
    color="light"
  >
    Welcome!
  </div>
  <div
    class="c2"
    kind="danger"
  >
    invalid credentials with looooooooooooooooooooooooooooooooong text
  </div>
  <div
    class="c3"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c4"
    >
      <div
        class="c3"
      >
        <form
          class="c5"
          data-testid="userpassword"
        >
          <div
            class="c6"
          >
            <label
              class="c7"
              font-size="0"
            >
              Username
              <input
                autocomplete="off"
                class="c8"
                color="text.primaryInverse"
                inputmode="text"
                placeholder="Username"
                type="text"
                value=""
              />
            </label>
          </div>
          <div
            class="c6"
          >
            <div
              class="c9"
              width="100%"
            >
              <label
                class="c7"
                font-size="0"
              >
                Password
                <input
                  autocomplete="off"
                  class="c8"
                  color="text.primaryInverse"
                  inputmode="text"
                  placeholder="Password"
                  type="password"
                  value=""
                />
              </label>
            </div>
          </div>
          <button
            class="c10"
            kind="primary"
            type="submit"
            width="100%"
          >
            Sign In
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`sso list still renders when local auth is disabled 1`] = `
.c2 {
  box-sizing: border-box;
  padding-bottom: 8px;
  padding-top: 8px;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-bottom: 16px;
  margin-top: 16px;
  width: 100%;
}

.c3:active {
  opacity: 0.56;
}

.c3:hover,
.c3:focus {
  background: #651FFF;
}

.c3:active {
  background: #354AA4;
}

.c3:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-bottom: 0px;
  margin-top: 16px;
  width: 100%;
}

.c8:active {
  opacity: 0.56;
}

.c8:hover,
.c8:focus {
  background: #651FFF;
}

.c8:active {
  background: #354AA4;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c7 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  padding-bottom: 24px;
  width: 464px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 24px;
  color: #FFFFFF;
  text-align: center;
}

.c4 {
  background-color: #444444;
  display: block;
  width: 100%;
  border: 1px solid transparent;
  height: 40px;
  position: relative;
  box-sizing: border-box;
}

.c4:hover,
.c4:focus {
  background: rgb(61,61,61);
  border: 1px solid rgb(142,142,142);
}

.c4 .c6 {
  font-size: 20px;
  opacity: 0.87;
}

.c9 {
  background-color: #dd4b39;
  display: block;
  width: 100%;
  border: 1px solid transparent;
  height: 40px;
  position: relative;
  box-sizing: border-box;
}

.c9:hover,
.c9:focus {
  background: rgb(198,67,51);
  border: 1px solid rgb(234,147,136);
}

.c9 .c6 {
  font-size: 20px;
  opacity: 0.87;
}

.c5 {
  align-items: center;
  display: flex;
  justify-content: center;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  width: 56px;
  font-size: 24px;
  text-align: center;
  border-right: 1px solid rgba(0,0,0,0.12);
}

<div
  class="c0"
  width="464px"
>
  <div
    class="c1"
    color="light"
  >
    Welcome!
  </div>
  <div
    class="c2"
    data-testid="sso-list"
  >
    <button
      class="c3 c4"
      color="#444444"
      kind="primary"
    >
      <div
        class="c5"
      >
        <span
          class="c6 c7 icon icon-github "
          color="light"
          data-testid="icon"
        />
      </div>
      Login with github
    </button>
    <button
      class="c8 c9"
      color="#dd4b39"
      kind="primary"
    >
      <div
        class="c5"
      >
        <span
          class="c6 c7 icon icon-google-plus "
          color="light"
          data-testid="icon"
        />
      </div>
      Login with google
    </button>
  </div>
</div>
`;

exports[`sso providers rendering 1`] = `
.c2 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  padding-bottom: 8px;
  padding-top: 8px;
  padding-left: 40px;
  padding-right: 40px;
}

.c15 {
  box-sizing: border-box;
  margin-top: -4px;
  padding-top: 16px;
  text-align: center;
}

.c5 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-bottom: 16px;
  margin-top: 16px;
  width: 100%;
}

.c5:active {
  opacity: 0.56;
}

.c5:hover,
.c5:focus {
  background: #651FFF;
}

.c5:active {
  background: #354AA4;
}

.c5:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-bottom: 0px;
  margin-top: 16px;
  width: 100%;
}

.c13:active {
  opacity: 0.56;
}

.c13:hover,
.c13:focus {
  background: #651FFF;
}

.c13:active {
  background: #354AA4;
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: none;
  text-transform: none;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c16:active {
  opacity: 0.56;
}

.c16:hover,
.c16:focus {
  background: none;
  text-decoration: underline;
}

.c16:disabled {
  background: none;
  color: rgba(255,255,255,0.3);
}

.c9 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 32px;
  margin-bottom: 32px;
  padding-bottom: 24px;
  width: 464px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c1 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  padding-top: 24px;
  color: #FFFFFF;
  text-align: center;
}

.c3 .prev-slide-enter {
  transform: translateX(-100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c3 .prev-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c3 .prev-slide-exit {
  transform: translateX(100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c3 .next-slide-enter {
  transform: translateX(100%);
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.c3 .next-slide-enter-active {
  transform: translateX(0);
  opacity: 1;
  transition: transform 500ms ease;
}

.c3 .next-slide-exit {
  transform: translateX(-100%);
  opacity: 1;
  transition: transform 500ms ease;
}

.c6 {
  background-color: #444444;
  display: block;
  width: 100%;
  border: 1px solid transparent;
  height: 40px;
  position: relative;
  box-sizing: border-box;
}

.c6:hover,
.c6:focus {
  background: rgb(61,61,61);
  border: 1px solid rgb(142,142,142);
}

.c6 .c8 {
  font-size: 20px;
  opacity: 0.87;
}

.c10 {
  background-color: #dd4b39;
  display: block;
  width: 100%;
  border: 1px solid transparent;
  height: 40px;
  position: relative;
  box-sizing: border-box;
}

.c10:hover,
.c10:focus {
  background: rgb(198,67,51);
  border: 1px solid rgb(234,147,136);
}

.c10 .c8 {
  font-size: 20px;
  opacity: 0.87;
}

.c11 {
  background-color: #205081;
  display: block;
  width: 100%;
  border: 1px solid transparent;
  height: 40px;
  position: relative;
  box-sizing: border-box;
}

.c11:hover,
.c11:focus {
  background: rgb(28,72,116);
  border: 1px solid rgb(121,150,179);
}

.c11 .c8 {
  font-size: 20px;
  opacity: 0.87;
}

.c12 {
  background-color: #f7931e;
  display: block;
  width: 100%;
  border: 1px solid transparent;
  height: 40px;
  position: relative;
  box-sizing: border-box;
}

.c12:hover,
.c12:focus {
  background: rgb(222,132,27);
  border: 1px solid rgb(250,190,120);
}

.c12 .c8 {
  font-size: 20px;
  opacity: 0.87;
}

.c14 {
  background-color: #2672ec;
  display: block;
  width: 100%;
  border: 1px solid transparent;
  height: 40px;
  position: relative;
  box-sizing: border-box;
}

.c14:hover,
.c14:focus {
  background: rgb(34,102,212);
  border: 1px solid rgb(124,170,243);
}

.c14 .c8 {
  font-size: 20px;
  opacity: 0.87;
}

.c7 {
  align-items: center;
  display: flex;
  justify-content: center;
  position: absolute;
  left: 0;
  top: 0;
  bottom: 0;
  width: 56px;
  font-size: 24px;
  text-align: center;
  border-right: 1px solid rgba(0,0,0,0.12);
}

<div
  class="c0"
  width="464"
>
  <div
    class="c1"
    color="light"
  >
    Welcome!
  </div>
  <div
    class="c2"
    style="position: relative; height: auto; transition: height 500ms ease;"
  >
    <div
      class="c3"
    >
      <div
        class="c2"
      >
        <div
          class="c4"
          data-testid="sso-list"
        >
          <button
            class="c5 c6"
            color="#444444"
            kind="primary"
          >
            <div
              class="c7"
            >
              <span
                class="c8 c9 icon icon-github "
                color="light"
                data-testid="icon"
              />
            </div>
            Login with github
          </button>
          <button
            class="c5 c10"
            color="#dd4b39"
            kind="primary"
          >
            <div
              class="c7"
            >
              <span
                class="c8 c9 icon icon-google-plus "
                color="light"
                data-testid="icon"
              />
            </div>
            Login with google
          </button>
          <button
            class="c5 c11"
            color="#205081"
            kind="primary"
          >
            <div
              class="c7"
            >
              <span
                class="c8 c9 icon icon-bitbucket "
                color="light"
                data-testid="icon"
              />
            </div>
            Login with bitbucket
          </button>
          <button
            class="c5 c12"
            color="#f7931e"
            kind="primary"
          >
            <div
              class="c7"
            >
              <span
                class="c8 c9 icon icon-openid "
                color="light"
                data-testid="icon"
              />
            </div>
            Login with Mission Control
          </button>
          <button
            class="c13 c14"
            color="#2672ec"
            kind="primary"
          >
            <div
              class="c7"
            >
              <span
                class="c8 c9 icon icon-windows "
                color="light"
                data-testid="icon"
              />
            </div>
            Microsoft
          </button>
        </div>
        <div
          class="c15"
        >
          <button
            class="c16"
            kind="text"
          >
            Other sign-in options
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
